# _rentals

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/example/: settings.py  urls.py
app/fixtures/: initital.json
app/rentals/: admin.py  models.py  selectors.py  tests.py  views.py
app/rentals/migrations/: 0001_initial.py  0002_alter_reservation_options.py
app/rentals/templates/rentals/: reservation_list.html
nginx/: Dockerfile  nginx.conf
