[tool.poetry]
name = "rentals"
version = "0.1.0"
description = ""
authors = ["urm8 <arctginil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.1"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example.settings"
python_files = "test*"
